2009-03-06  Badlop  <badlop@process-one.net>

	* src/eldap/eldap.erl: moves waiting for response queries to
	pending queue on an LDAP connection failure (thanks to Evgeniy
	Khramtsov)

	* src/eldap/eldap.erl: implemented queue for pending
	queries (thanks to Evgeniy Khramtsov)

	* src/eldap/eldap.erl: Close a connection on tcp_error (thanks to
	Evgeniy Khramtsov)

	* src/eldap/Makefile.in: added +optimize and +driver compilation
	options (thanks to Evgeniy Khramtsov)
	* src/eldap/Makefile.win32: Likewise

2009-03-05  Badlop  <badlop@process-one.net>

	* src/ejabberd_app.erl: In a Windows machine, explicitly add the
	nameservers, as it seems Erlang does not do itself (EJAB-860)
	* src/win32_dns.erl: Get name servers from Windows registy (thanks
	to Geoff Cant)

	* doc/guide.tex: Require OpenSSL 0.9.8f or higher (EJAB-877)
	* doc/guide.html: Likewise

2009-03-04  Badlop  <badlop@process-one.net>

	* src/ejabberd_auth.erl: If anonymous auth is enabled, when
	checking if the account already exists in other auth methods, take
	into account if the auth method failed (EJAB-882)
	* src/ejabberd_auth_anonymous.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth_pam.erl: Likewise

2009-03-04  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Allow node creation without configure
	item

2009-03-03  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Add roster subscriptions handling
	so on_sub_and_presence if fully supported.

	* src/mod_pubsub/mod_pubsub.erl: Allow to send PEP events to all
	connected ressources, even via s2s.
	* src/mod_caps.erl: Likewise

2009-02-27  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.erl: Added a workaround for inet:peername
	returning 'ebadf'

	* src/cyrsasl_digest.erl: Unquote backslash in DIGEST-MD5 quoted