@@ -1,3 +1,9 @@
+2009-03-07  Badlop  <badlop@process-one.net>
+
+	* src/ejabberd_c2s.erl: Enforce privacy rules also for
+	subscription requests (EJAB-300)
+	* src/ejabberd_sm.erl: Likewise
+
 2009-03-06  Badlop  <badlop@process-one.net>
 
 	* src/eldap/eldap.erl: moves waiting for response queries to
